<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewDairy">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_date_dairy"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            tools:text="@string/current_date_text_string"
            android:textSize="18sp"
            android:fontFamily="@font/abel"
            android:layout_marginBottom="77dp"
            app:layout_constraintBottom_toTopOf="@+id/dairy_text" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/current_date_dairy"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/title_dairy"
            android:hint="@string/title_hint"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            android:autofillHints="" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/dairy_text"
            app:layout_constraintTop_toBottomOf="@+id/current_date_dairy"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:text="@string/diary_hint"
            android:hint="@string/diary_hint"
            android:autofillHints="" />
</android.support.constraint.ConstraintLayout>