<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_item"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_recycler_item"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/diary_recycler_date"
            android:textSize="16sp"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp" />

    <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_recycler_item"
            app:layout_constraintStart_toEndOf="@+id/date_recycler_item"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/diary_recycler_title_text_view"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/delete_button" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_delete"
            android:id="@+id/delete_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="@color/cardview_dark_background"
            android:backgroundTint="@android:color/transparent"
            android:minHeight="48dp" />
</android.support.constraint.ConstraintLayout>